; ModuleID = '/home/carl/AnghaBench/kphp-kdb/watchcat/extr_watchcat-data.c_gen_addrs.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/watchcat/extr_watchcat-data.c_gen_addrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Entry = common dso_local global i32 0, align 4
@ans_n = common dso_local global i64 0, align 8
@ans = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @gen_addrs(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  store i8* %5, i8** %3, align 8
  store i32 0, i32* %4, align 4
  br label %6

6:                                                ; preds = %19, %1
  %7 = load i8*, i8** %3, align 8
  %8 = load i8, i8* %7, align 1
  %9 = icmp ne i8 %8, 0
  br i1 %9, label %10, label %20

10:                                               ; preds = %6
  %11 = load i8*, i8** %3, align 8
  %12 = getelementptr inbounds i8, i8* %11, i32 1
  store i8* %12, i8** %3, align 8
  %13 = load i8, i8* %11, align 1
  %14 = sext i8 %13 to i32
  %15 = icmp eq i32 %14, 1
  br i1 %15, label %16, label %19

16:                                               ; preds = %10
  store i32 1, i32* %4, align 4
  %17 = load i8*, i8** %3, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 -1
  store i8 0, i8* %18, align 1
  br label %20

19:                                               ; preds = %10
  br label %6

20:                                               ; preds = %16, %6
  %21 = load i8*, i8** %2, align 8
  %22 = load i8*, i8** %2, align 8
  %23 = call i32 @strlen(i8* %22)
  %24 = call i32 @watchcat_prepare_entry(i32* @Entry, i8* %21, i32 %23)
  %25 = load i32, i32* %4, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %20
  %28 = load i8*, i8** %3, align 8
  %29 = getelementptr inbounds i8, i8* %28, i64 -1
  store i8 1, i8* %29, align 1
  br label %32

30:                                               ; preds = %20
  %31 = load i8*, i8** %2, align 8
  store i8* %31, i8** %3, align 8
  br label %32

32:                                               ; preds = %30, %27
  store i64 0, i64* @ans_n, align 8
  %33 = call i32 @process_entry(i32* @Entry)
  %34 = load i32, i32* @ans, align 4
  %35 = load i64, i64* @ans_n, align 8
  %36 = call i32 @dl_qsort_addr(i32 %34, i64 %35)
  %37 = load i8*, i8** %3, align 8
  ret i8* %37
}

declare dso_local i32 @watchcat_prepare_entry(i32*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @process_entry(i32*) #1

declare dso_local i32 @dl_qsort_addr(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
